# unifi-tui

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  cliff.toml
.github/workflows/: ci.yml  release.yml
scripts/: release.sh
src/: app.rs  clients.rs  devices.rs  error.rs  handlers.rs  main.rs  sites.rs  state.rs  stats.rs
src/ui/: clients.rs  devices.rs  mod.rs  sites.rs  stats.rs  status_bar.rs  topology.rs  topology_view.rs
src/ui/topology/: mod.rs  node.rs  topology.rs  topology_view.rs
src/ui/widgets/: client_stats.rs  device_stats.rs  mod.rs
