[package]
name = "unifi-tui"
version = "0.1.19"
edition = "2021"
description = "Rust terminal user interface for the UniFi Network API"
license = "MIT"
authors = ["Callum Teesdale <callumjamesteesdale@gmail.com>"]
repository = "https://github.com/callumteesdale/unifi-tui"
documentation = "https://docs.rs/unifi-tui"
readme = "README.md"
keywords = ["unifi", "networking", "api-client", "tui"]
categories = ["api-bindings", "network-programming"]

[dependencies]
unifi-rs = "0.1.13"
tokio = { version = "1.43.0", features = ["full"] }
ratatui = "0.29.0"
crossterm = "0.28.1"
anyhow = "1.0.95"
clap = { version = "4.5.26", features = ["derive", "env"] }