[package]
name = "unifi-tui"
version = "0.2.3"
edition = "2021"
description = "Rust terminal user interface for the UniFi Network API"
license = "MIT"
authors = ["Callum Teesdale <callumjamesteesdale@gmail.com>"]
repository = "https://github.com/callumteesdale/unifi-tui"
documentation = "https://docs.rs/unifi-tui"
readme = "README.md"
keywords = ["unifi", "networking", "api-client", "tui"]
categories = ["api-bindings", "network-programming"]
exclude = [
    "*.gif",
]

[dependencies]
unifi-rs = "0.2.1"
tokio = { version = "1.43.0", features = ["full"] }
ratatui = "0.29.0"
crossterm = "0.28.1"
anyhow = "1.0.95"
clap = { version = "4.5.26", features = ["derive", "env"] }
chrono = { version = "0.4.39", features = ["serde"] }
uuid = { version = "1.12.0", features = ["v4"] }
thiserror = { version = "2.0.11", features = ["default"] }
directories = "3.0.2"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tracing-appender = "0.2.3"

